[package]
name = "warplog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
directories = "5.0"
reqwest = {version = "0.11.18", features = ["blocking", "json"]}
serde = "1.0.164"
serde_derive = "1.0.164"